@@ -26,6 +26,7 @@ Bug fixes
 ~~~~~~~~~
 
  * Email templates and document uploader now support custom `STATICFILES_STORAGE` (Jonny Scholes)
+ * Removed alignment options (deprecated in HTML and not rendered by Wagtail) from `TableBlock` context menu (Moritz Pfeiffer)
 
 
 Upgrade considerations
